Change behavior of simulateRemotePods to use the Pods API